# veilpay

./: .gitignore  Anchor.toml  Arcium.toml  README.md  package-lock.json  package.json  tsconfig.json
.zed/: tasks.json
arcium-mpc/: Anchor.toml  package-lock.json  package.json
arcium-mpc/cli/: package.json  tsconfig.json
arcium-mpc/tests/: veilpay.ts
cli/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/scripts/: e2e-devnet.ts
cli/src/: arcium.ts  client.ts  helius.ts  index.ts  output.ts  run.ts  solana.ts
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  polyfills.ts
legacy/cli/: tsconfig.json
migrations/: deploy.ts
programs/veilpay/: Cargo.toml
programs/veilpay/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/veilpay/src/errors/: mod.rs
programs/veilpay/src/events/: mod.rs
programs/veilpay/src/instructions/: apply_pending_balance.rs  batch_transfer.rs  close_account.rs  confidential_balance.rs  debit.rs  deposit.rs  init_balance.rs  initialize_existing_mint.rs  initialize_mint.rs  mod.rs  private_transfer.rs  prove_threshold.rs  reveal_to_auditor.rs  transfer.rs  vault.rs  view_balance.rs  withdraw.rs
programs/veilpay/src/state/: confidential_balance.rs  mint_config.rs  mod.rs  veilpay_mint.rs
programs/veilpay/src/utils/: commitment.rs  crypto.rs  encryption.rs  helpers.rs  mod.rs
sdk/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/scripts/: sync-idl.mjs
sdk/src/: accounts.ts  admin.ts  (+8 more)
tests/: devnet-smoke.ts  veilpay.ts
web/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+179 files in other folders)
